--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,5 @@
 /pkg/
 /spec/reports/
 /tmp/
-/lib/google/protobuf/descriptor_pb.rb
-/lib/google/protobuf/plugin_pb.rb
+/lib/google/protobuf/descriptor.pb.rb
+/lib/google/protobuf/compiler/plugin.pb.rb
