Add test on 3.0

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,7 @@ jobs:
         container_tag:
           - 2.6-bionic
           - 2.7-bionic
+          - 3.0-focal
     container:
       image: rubylang/ruby:${{ matrix.container_tag }}
     steps:
