--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,3 +37,6 @@ jobs:
           gem install bundler
           bin/setup
           bundle exec rake
+          bundle exec rake install
+          mkdir -p tmp/out
+          RBS_PROTOBUF_BACKEND=protobuf protoc --rbs_out=tmp/out -Iexample example/*.proto
